# Call

./: .gitignore  CMakeLists.txt  README.md  build.sh
include/: bst.h  linked_list.h  quicksort.h
src/: CMakeLists.txt  bst.c  linked_list.c  quicksort.c
tests/: CMakeLists.txt  test_bst.c  test_linked_list.c  test_quicksort.c
