function(run_test name)
	add_executable(${name} ${name}.c)
	target_include_directories(${name} PRIVATE ${CMAKE_SOURCE_DIR}/include)
	target_link_libraries(${name} PRIVATE call)
	add_test(NAME ${name} COMMAND ${name})
endfunction()

run_test(test_linked_list)
run_test(test_quicksort)
run_test(test_bst)
